<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="omomo_app_name">Omomo</string>
    <string name="omomo_url">www.omomo.pl</string>
    <string name="omomo_app_lower_name">omomo</string>
    <string name="omomo_action_settings">Ustawienia</string>
    <string name="omomo_logo_description">omomo</string>
    <string name="omomo_text_content">Najlepsze wydarzenia dla Ciebie w jednym miejscu!</string>
	<string name="omomo_version_content">app version 1.0</string>
    <string name="omomo_location_retrieving_data">Proszę czekać</string>
    <string name="omomo_list_network_unavailable">Brak połączenia z siecią</string>
    <string name="omomo_refresh_locations">Pokaż wszystkie lokalizacje</string>
    <string name="omomo_search_locations">Szukaj</string>
    <string name="omomo_get_data_failed">Pobranie danych nie powiodło się</string>
    <string name="omomo_get_data_empty">Brak danych lub wystąpił problem z połączeniem</string>
    <string name="omomo_get_data_distance_empty">Brak danych dla określonej odległości od Twojej pozycji</string>
    <string name="omomo_term_counter">liczba wydarzeń:</string>
    <string name="omomo_all_term_counter">liczba wszystkich wydarzeń:</string>
    <string name="omomo_close_application">Czy na pewno chcesz wyjść?</string>
    <string name="omomo_close_web_view">Czy na pewno chcesz zamknąć to okno?</string>
    <string name="omomo_no_connection">Brak połączenia z internetem</string>
    <string name="omomo_yes">Tak</string>
    <string name="omomo_no">Nie</string>
    <string name="omomo_default_distance_value">50</string>
    <string name="omomo_you_are_here">Jesteś tutaj</string>
    <string name="omomo_repertoire">Repertuar</string>
    <string name="omomo_choose_localization">Wybierz lokalizacje</string>
    <string name="omomo_show_repertoire">Pokaż repertuar</string>
    <string name="omomo_http">http://</string>
    <string name="omomo_repertoire_url_const">.html?view=mobile</string>
    <string name="omomo_repertoire_theme_const">theme=omomo_mobile</string>
    <string name="omomo_localizations">Lokalizacje</string>
    <string name="omomo_localizations_draw_area">Rysuj obszar poszukiwań</string>
    <string name="omomo_localizations_circle">Wyznacz okrąg poszukiwań</string>
    <string name="omomo_localizations_search_range">Zakres poszukiwań lokalizacji</string>
    <string name="omomo_localizations_choose_value">Naciśnij aby wybrać wartość</string>
    <string name="omomo_localizations_choose_distance">Wybierz wartość dystansu [km]</string>
    <string name="omomo_turn_on_gps">Nie można określić aktualnego położenia - proszę włączyć moduł GPS</string>
    <string name="omomo_repertoire_header">Repertuar</string>
    <string name="omomo_locations">Lokalizacje</string>
    <string name="omomo_maps">Mapy</string>
    <string name="omomo_choose_repertoire">Repertuar</string>
    <string name="omomo_repertoire_filter">Filtr repertuaru</string>
    <string name="omomo_repertoire_filter_date_from">Data początkowa:</string>
    <string name="omomo_repertoire_filter_date_to">Data końcowa:</string>
    <string name="omomo_repertoire_filter_name">Nazwa wydarzenia:</string>
    <string name="omomo_choose_date">Wybierz datę</string>
    <string name="omomo_choose_time">Wybierz godzinę</string>
    <string name="omomo_date">Data</string>
    <string name="omomo_time">Godzina</string>
    <string name="omomo_repertoire_filter_clean">Filtr został wyczyszczony</string>
    <string name="omomo_error_occur">Wystąpił błąd</string>
    <string name="omomo_close">Zamknij</string>
    <string name="omomo_empty_filter_criteria">Nie wybrano kryteriów filtrowania</string>
    <string name="omomo_empty_date_from">Proszę podać datę początkową</string>
    <string name="omomo_empty_date_to">Proszę podać datę końcową</string>
    <string name="omomo_localization_require">Prosimy o zmianę ustawień lokalizacji w Państwa systemie</string>
    <string name="omomo_filter_filter">FILTRUJ</string>
    <string name="omomo_filter_clean">WYCZYŚĆ</string>
    <string name="omomo_filter_close">ZAMKNIJ</string>
    <string name="omomo_filter_from">"od "</string>
    <string name="omomo_filter_to">"do "</string>
    <string name="omomo_filter">"Filtr: "</string>
    <string name="omomo_orders">Zamówienia</string>
    <string name="omomo_question">Pytanie</string>
    <string name="omomo_address_data_saved">Twoje dane adresowe zostały zapisane</string>
    <string name="omomo_information">Informacja</string>
    <string name="omomo_localization_information">W celu uzyskania danych w odniesieniu do Państwa aktualnej pozycji prosimy zmienić ustawienia lokalizacji w systemie</string>
    <string name="omomo_preferences">Ustawienia</string>
    <string name="omomo_no_thank_you">Nie, dziękuje</string>
    <string name="omomo_nearest_repertoire_not_found">Niestety w wybranej odległości od Państwa lokalizacji (%1$d km) nie znaleziono repertuaru - pobrano najbliższy dostępny repertuar</string>
    <string name="omomo_city">Miejscowość:</string>
    <string name="omomo_choose">Wybierz</string>
    <string name="omomo_filter_event">"wydarzenie "</string>
    <string name="omomo_filter_city">"miasto "</string>
    <string name="omomo_filter_category">"kategoria "</string>
    <string name="omomo_get_map_preview">Pobieranie podglądu mapy ...</string>
    <string name="omomo_buy_ticket">KUP BILET</string>
    <string name="omomo_category">Kategoria:</string>
    <string name="omomo_latest_terms">NAJBLIŻSZE TERMINY</string>
    <string name="omomo_clean_cache_image">Przeładuj zdjęcia</string>
    <string name="omomo_received_network_status">Pobrano informację o stanie sieci</string>
    <string name="omomo_has_internet_connection">Aplikacja posiada dostęp do internetu</string>
    <string name="omomo_has_not_connection">Brak dostępu do internetu</string>
    <string name="no_network">Brak połączenia sieciowego</string>
    <string name="omomo_no_repertoire">Nie znaleziono repertuaru</string>
    <string name="omomo_no_buy_ticket">BRAK BILETÓW</string>
    <string name="omomo_event">Wydarzenie</string>
    <string name="omomo_latest">Kiedy najbliższy?</string>
    <string name="omomo_where">Gdzie?</string>
    <string name="omomo_place">Miejsce</string>
    <string name="omomo_event_description">Szczegóły wydarzenia</string>
    <string name="omomo_no_data">Brak</string>
    <string name="omomo_show_direction">POKAŻ TRASĘ</string>
</resources>
