<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_reload"
        android:title="Odśwież"
        android:icon="@drawable/ic_action_action_autorenew"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_filter_repertoire"
          android:title="Filtruj repertuar"
          android:icon="@drawable/ic_action_action_search"
          android:orderInCategory="2"
          android:showAsAction="always"/>

    <item android:id="@+id/menu_settings"
          android:title="@string/omomo_action_settings"
          android:showAsAction="withText"/>

    <item android:id="@+id/menu_clear_cache"
          android:title="@string/omomo_clean_cache_image"
          android:showAsAction="withText"/>

    <item android:id="@+id/menu_close"
          android:title="@string/omomo_close"
          android:showAsAction="withText"/>
</menu>